Update CompareSessionsView.java